# terrain-router

./: .clangd  .clangd-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.txt  benNevis_opentop.sh  benNevis_overpass.sh
.github/workflows/: cmake.yml
cmake/: version_info.cpp.in
data/: benNevis-overpass.xml  benNevis.xml  benNevis_COP30.tiff  benNevis_filtered_water.xyz  benNevis_water.tiff#  outfile.asc
docs/: Context Survey.md  DOER.md  DOER.tex  Design and Implementation.md  Development Plan.ods  Dissertation - DOER.md  File Organisation.md  Further Improvements.md  Sources and Attributions.md  contextSurvey.tex  ethics.doc  test.tex  triangulation-algorithm.md
docs/.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
docs/.obsidian/plugins/obsidian-minimal-settings/: data.json
include/tsr/: ChunkInfo.hpp  ChunkManager.hpp  Chunker.hpp  Config.hpp  Core.hpp  DTM.hpp  DataFile.hpp  DataSource.hpp  DefaultFeatures.hpp  DelaunayTriangulation.hpp  Delaunay_3.hpp  Feature.hpp  FeatureManager.hpp  GeometryUtils.hpp  IO.hpp  Logging.hpp  MapUtils.hpp  Mesh.hpp  MeshBoundary.hpp  MeshTransformations.hpp  MeshUtils.hpp  Point2.hpp  Point3.hpp  PointProcessor.hpp  Point_2.hpp  Point_3.hpp  Presets.hpp  RouteNode.hpp  Router.hpp  RouterNode.hpp  SurfaceMesh.hpp  Surface_mesh.hpp  TSRState.hpp  Tin.hpp  TsrState.hpp  Vector3.hpp  Vector_3.hpp  logging.hpp  version_info.hpp
include/tsr/API/: APICaller.hpp  APICallerConfig.hpp  Chunking.hpp  GDALHandler.hpp  MapResponseHandler.cpp
include/tsr/Features/: APIFeature.hpp  BoolWaterFeature.hpp  CEHTerrainFeature.hpp  ConditionalFeature.hpp  ConstantFeature.hpp  DataFeature.hpp  DistanceFeature.hpp  GradientFeature.hpp  GradientSpeedFeature.hpp  InverseFeature.hpp  MultiplierFeature.hpp  PathFeature.hpp  SimpleBooleanFeature.hpp  SimpleBooleanToDoubleFeature.hpp  Untitled-1.js  WaterFeature.hpp
include/tsr/IO/: ChunkCache.hpp  FileIO.hpp  FileIOHandler.hpp  GPXFormatter.hpp  ImageIO.hpp  ImageProcesor.hpp  JSONParser.hpp  KMLWriter.hpp  MapIO.hpp  MeshIO.hpp
include/tsr/Router/: GradientFeature.hpp
include/tsr/features/: BooleanWaterFeature.hpp  GradientFeature.hpp  TerrainTypeFeature.hpp
scripts/: README.md  benNevis_DEM.sh  benNevis_ceh.sh  benNevis_opentop.sh  benNevis_overpass.sh  benNevis_paths.sh  benNevis_terrain_types.sh  benNevis_water.sh  test-opencv.py
src/: DTM.cpp  IO.cpp  cmd.cpp  logging.cpp
src/IO/: FileIOHandler.cpp  ImageProcessor.cpp
src/kml_writer/: kml_writer.cpp  kml_writer.hpp
src/routing/: main.cpp
src/routingLib/: routing.cpp
src/terrainParserLib/: TerrainParser.cpp
src/terrain_parser/: terrain_parser.cpp  terrain_parser.hpp
src/tsr/: ChunkManager.cpp  Chunker.cpp  DTM.cpp  DelaunayTriangulation.cpp  Feature.cpp  FeatureManager.cpp  GeometryUtils.cpp  Logging.cpp  MapUtils.cpp  MeshBoundary.cpp  MeshUtils.cpp  Point3.cpp  PointProcessor.cpp  Presets.cpp  Router.cpp  TSRState.cpp  TsrState.cpp  cmd.cpp  logging.cpp  version_info.cpp
src/tsr/API/: APICaller.cpp  Chunking.cpp  GDALHandler.cpp  ReponseHandler.cpp
src/tsr/Features/: APIFeature.cpp  BoolWaterFeature.cpp  CEHTerrainFeature.cpp  GradientFeature.cpp  GradientSpeedFeature.cpp  MultiplierFeature.cpp  PathFeature.cpp
src/tsr/IO/: ChunkCache.cpp  FileIO.cpp  FileIOHandler.cpp  GPXFormatter.cpp  ImageIO.cpp  ImageProcessor.cpp  JSONParser.cpp  KMLWriter.cpp  MapIO.cpp  MapProcessor.cpp  MeshIO.cpp
src/tsr/features/: BooleanWaterFeature.cpp  GradientFeature.cpp  TerrainTypeFeature.cpp
test/: main.cpp  test-route.cpp  test-routing.cpp  test_GDALHandler.hpp  test_MeshUtils.hpp  test_api.hpp  test_dtm.hpp  test_feature.hpp  test_featureManager.hpp  test_features.hpp  test_router.hpp  test_triangulation.hpp
